--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11"
 ]
 dependencies = [
+    "kiara>=0.4.33",
     "kiara_plugin.onboarding>=0.4.3",
     "kiara_plugin.tabular>=0.4.22",
     "kiara_plugin.network_analysis>=0.4.10",
