--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,12 +30,12 @@ classifiers = [
     "Programming Language :: Python :: 3.11"
 ]
 dependencies = [
-    "kiara>=0.4.33",
+    "kiara>=0.4.38",
     "kiara_plugin.onboarding>=0.4.3",
-    "kiara_plugin.tabular>=0.4.22",
-    "kiara_plugin.network_analysis>=0.4.10",
-    "kiara_plugin.language_processing>=0.4.12",
+    "kiara_plugin.tabular>=0.4.25",
+    "kiara_plugin.network_analysis>=0.4.12",
     "matplotlib==3.7.1",
+    "observable-jupyter==0.1.14"
 ]
 dynamic = ["version"]
 
